--- a/arc_manager/templates/users/user_detail.html
+++ b/arc_manager/templates/users/user_detail.html
@@ -77,9 +77,7 @@
                     <div class="col-md-6">
                         <p>
                             <strong>Rol en la organización:</strong><br>
-                            {% if user_to_view.is_superuser %}
-                                <span class="badge bg-danger fs-6">Superusuario</span>
-                            {% elif user_to_view.is_org_admin %}
+                            {% if user_to_view.is_org_admin %}
                                 <span class="badge bg-warning fs-6">Administrador</span>
                             {% else %}
                                 <span class="badge bg-secondary fs-6">Usuario</span>
